src/renderer/snapshots/thndrs__renderer__region__tests__streaming_live_frame.snap
---
source: src/renderer/region.rs
expression: frame.render_styled()
---
│                                                                                   # [bg=#171928]=                                                                                
│   888    888                    888                                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888                    888                  [bg=#171928]=                           [bg=#171928]=  
│   888    888                    888                                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888                    888                  [bg=#171928]=                           [bg=#171928]=  
│   888    888                    888                                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888                    888                  [bg=#171928]=                           [bg=#171928]=  
│   888888 88888b.  88888b.   .d88888 888d888 .d8888b                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888888 88888b.  88888b.   .d88888 888d888 .d8888b  [bg=#171928]=                           [bg=#171928]=  
│   888    888 "88b 888 "88b d88" 888 888P"   88K                                   # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888 "88b 888 "88b d88" 888 888P"   88K      [bg=#171928]=                           [bg=#171928]=  
│   888    888  888 888  888 888  888 888     "Y8888b.                              # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=888    888  888 888  888 888  888 888     "Y8888b. [bg=#171928]=                           [bg=#171928]=  
│   Y88b.  888  888 888  888 Y88b 888 888          X88                              # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=Y88b.  888  888 888  888 Y88b 888 888          X88 [bg=#171928]=                           [bg=#171928]=  
│   "Y888  888  888 888  888  "Y88888 888      88888P'                              # [bg=#171928]=   [fg=#37f499 bg=#171928 b]="Y888  888  888 888  888  "Y88888 888      88888P' [bg=#171928]=                           [bg=#171928]=  
│   ────────────────────────────────────────────────────────────────────────────    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=──────────────────────────────────────────────────────────────────────────── [bg=#171928]=  
│   thndrs  coding agent                                                            # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=thndrs  coding agent [bg=#171928]=                                                         [bg=#171928]=  
│   model: test-model   search: native                                              # [bg=#171928]=   [fg=#abb4da bg=#171928]=model:  [fg=#ebfafa bg=#171928]=test-model [fg=#abb4da bg=#171928]=   search:  [fg=#ebfafa bg=#171928]=native [bg=#171928]=                                           [bg=#171928]=  
│   cwd: /Users/owais/Projects/StormlightLabs/OpenSource/thndrs                     # [bg=#171928]=   [fg=#abb4da bg=#171928]=cwd: /Users/owais/Projects/StormlightLabs/OpenSource/thndrs [bg=#171928]=                  [bg=#171928]=  
│   ›  Ask for a change, run a command, or inspect this repo.                       # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=›   [fg=#abb4da bg=#171928]=Ask for a change, run a command, or inspect this repo. [bg=#171928]=                    [bg=#171928]=  
│   ?  help   Ctrl+P files                                                          # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=?   [fg=#abb4da bg=#171928]=help [fg=#37f499 bg=#171928 b]=   Ctrl+P  [fg=#abb4da bg=#171928]=files [bg=#171928]=                                                       [bg=#171928]=  
│                                                                                   # [bg=#171928]=                                                                                
│                                                                                   # [bg=#171928]=                                                                                
│   Assistant                                                                       # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=Assistant [bg=#171928]=                                                                    [bg=#171928]=  
│   streaming response text                                                         # [bg=#171928]=   [fg=#ebfafa bg=#171928]=streaming response text [bg=#171928]=                                                      [bg=#171928]=  
│                                                                                   # [bg=#171928]=                                                                                
│                                                                                   # [bg=#171928]=                                                                                
│   test-session  · idle                                                            # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#3b4261 bg=#212337]=· idle [bg=#212337]=                                                         [bg=#212337]=  
│   ›  follow up                                                                    # [bg=#212337]=   [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=follow up [bg=#212337]=                                                                 [bg=#212337]=  
│   model: test-model   search: native   tok: ↑0 ↓0   cwd: ~/Pr/St/O/thndrs         # [bg=#212337]=   [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=    [fg=#abb4da bg=#212337]=search: native [bg=#212337]=    [fg=#e0e0e0 bg=#212337]=tok: ↑0 ↓0 [bg=#212337]=    [fg=#3b4261 bg=#212337]=cwd: ~/Pr/St/O/thndrs [bg=#212337]=      [bg=#212337]=
