src/renderer/snapshots/thndrs__renderer__region__tests__tool_ok.snap
---
source: src/renderer/region.rs
expression: "render_entry_styled(&entry, 80)"
---
│                                                                                   # [bg=#171928]=                                                                                
│   ✓ search_text [ok]  pattern: fn main                                            # [bg=#171928]=   [fg=#37f499 bg=#171928]=✓  [fg=#ebfafa bg=#171928 b]=search_text [fg=#37f499 bg=#171928]= [ok] [bg=#171928]=   [fg=#abb4da bg=#171928]=pattern: fn main [bg=#171928]=                                         [bg=#171928]=  
│      │ src/main.rs:1:fn main() {                                                  # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#abb4da bg=#171928]=src/main.rs:1:fn main() { [bg=#171928]=                                               [bg=#171928]=  
│      │ src/main.rs:2: println!("hello");                                          # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#abb4da bg=#171928]=src/main.rs:2: println!("hello"); [bg=#171928]=                                       [bg=#171928]=  
│      │ src/main.rs:3:}                                                            # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#abb4da bg=#171928]=src/main.rs:3:} [bg=#171928]=                                                         [bg=#171928]=
