src/renderer/snapshots/thndrs__renderer__region__tests__user_message.snap
---
source: src/renderer/region.rs
expression: "render_entry_styled(&entry, 80)"
---
│                                                                                   # [bg=#292e42]=                                                                                
│   User                                                                            # [bg=#292e42]=   [fg=#04d1f9 bg=#292e42 b]=User [bg=#292e42]=                                                                         [bg=#292e42]=  
│   Hello, can you help me with this?                                               # [bg=#292e42]=   [fg=#ebfafa bg=#292e42]=Hello, can you help me with this? [bg=#292e42]=                                            [bg=#292e42]=
